force-app/main/default/objects/Age_of_Majority__mdt/Age_of_Majority__mdt.object-meta.xml
<CustomObject>
    <label>Age of Majority</label>
    <pluralLabel>Ages of Majority</pluralLabel>
</CustomObject>