force-app/main/default/objects/Age_of_Majority__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO Country Code</description>
    <inlineHelpText>Put here value in ISO Code (2 letters)</inlineHelpText>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>