force-app/main/default/objects/Age_of_Majority__mdt/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <description>ISO State Code</description>
    <inlineHelpText>Put here value in ISO Code (3 letters) if state needed</inlineHelpText>
    <label>State Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>